--- a/front_pages/pages/all_services/style.css
+++ b/front_pages/pages/all_services/style.css
@@ -8,6 +8,10 @@
     right: 1.5%;
 }
 
+.exit-button:hover{
+    filter: drop-shadow(0 0 10px #23B684);
+}
+
 .all-services-header{
     width: 87.5%;
 
@@ -83,25 +87,15 @@
     border: 2px solid rgb(35, 182, 132);
     border-radius: 20px;
     background: rgb(255, 255, 255);
-}
 
-.all-services-create-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/*Псевдокласс hover определяет, что будет с блоком, когда на него наведут курсор*/
-.all-services-create-button:hover{
-    box-shadow: inset 0 0 20px #23B684;
-}
-
-.all-services-create-button-link{
     color: rgb(35, 182, 132);
     font-family: Rubik Mono One, sans-serif;
     font-size: 30px;
     font-weight: 400;
     line-height: 37px;
+}
 
-
+/*Псевдокласс hover определяет, что будет с блоком, когда на него наведут курсор*/
+.all-services-create-button:hover{
+    box-shadow: inset 0 0 20px #23B684;
 }
