--- a/front_pages/pages/registration/style.css
+++ b/front_pages/pages/registration/style.css
@@ -3,6 +3,16 @@
     background-color:  rgb(4, 61, 93);
 }
 
+.exit-button{
+    position: absolute;
+    top: 2.5%;
+    right: 1.5%;
+}
+
+.exit-button:hover{
+    filter: drop-shadow(0 0 10px #23B684);
+}
+
 .registration-logo{
     /*Задание размеров*/
     width: 468px;
@@ -51,6 +61,8 @@
 }
 
 .registration-container{
+    position: relative;
+
     width: 740px;
     height: 406px;
     margin: 0 auto;
@@ -82,32 +94,26 @@
     margin: 20px;
 }
 
-.registration-registr{
-    box-sizing: border-box;
+.registration-button{
+    position: absolute;
+    left: 50%;
+    bottom: -7%;
+    transform: translate(-50%, -50%);
+
+    width: 560px;
+    height: 64px;
     border: 2px solid rgb(35, 182, 132);
     border-radius: 20px;
     background: rgb(255, 255, 255);
 
-    width: 560px;
-    height: 75px;
-    margin: 0 auto;
-}
-
-/*Псевдокласс hover определяет, что будет с блоком, когда на него наведут курсор*/
-.registration-registr:hover{
-    box-shadow: inset 0 0 10px #23B684;
-}
-
-.registration-registr-words {
     color: rgb(35, 182, 132);
     font-family: Rubik Mono One, sans-serif;
     font-size: 30px;
     font-weight: 400;
     line-height: 37px;
     text-align: center;
-
-    width: 476px;
-    height: 37px;
-
-    margin: 20px 42px;
+}
+/*Псевдокласс hover определяет, что будет с блоком, когда на него наведут курсор*/
+.registration-button:hover{
+    box-shadow: inset 0 0 10px #23B684;
 }
