--- a/front_pages/styles/font.css
+++ b/front_pages/styles/font.css
@@ -11,3 +11,10 @@
     font-weight: 400;
     src: url(../fonts/RubikMonoOne-Regular.ttf) format("truetype");
 }
+
+@font-face{
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 400;
+    src: url(../fonts/Rubik-Regular.ttf) format("truetype");
+}
