--- a/front_pages/pages/employee_select/style.css
+++ b/front_pages/pages/employee_select/style.css
@@ -52,7 +52,7 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 21px;
-    margin-top: -10px;
+    margin-top: -7px;
 }
 
 .employee-select-container .list-selected-employee{
@@ -62,10 +62,33 @@
     margin-bottom: 21px;
     display: block;
     text-align: left;
+
+    height: 60px;
+    padding: 0 10px 0 15px;
+    border-radius:50px;
 }
 .employee-select-container .selected-employee-container:hover{
     border: 2px solid rgb(35, 182, 132);
-    border-radius:50px;
-    padding: 5px;
 }
+.employee-select-container .selected-employee-container:focus{
+    background: rgb(35, 182, 132);
+}
+.employee-select-error{
+    width: 527px;
+    height: 149px;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+
+    color: rgb(0, 0, 0);
+    font-family: Rubik Mono One, sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0;
+    text-align: center;
+}
+
 
