--- a/front_pages/styles/common.css
+++ b/front_pages/styles/common.css
@@ -8,3 +8,30 @@ body{
     width: 100%;
     min-height: 100% !important;
 }
+.order-create-button{
+    position: absolute;
+    bottom: 3%;
+
+    width: 300px;
+    height: 75px;
+
+    box-sizing: border-box;
+    border: 2px solid rgb(35, 182, 132);
+    border-radius: 20px;
+    background: rgb(255, 255, 255);
+
+    color: rgb(35, 182, 132);
+    font-family: Rubik Mono One, sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 37px;
+}
+.order-create-button:hover{
+    box-shadow: inset 0 0 10px #23B684;
+}
+.continue-button{
+    right: 2%;
+}
+.backwards-button{
+    left: 2%;
+}
