--- a/front_pages/pages/client_orders/style.css
+++ b/front_pages/pages/client_orders/style.css
@@ -1,7 +1,3 @@
-.main-container{
-    background: rgb(4, 61, 93);
-}
-
 .client-orders-header{
     margin: 4% 0 0 6%;
 
@@ -93,4 +89,7 @@
     font-weight: 400;
     line-height: 32px;
 
+}
+.client-orders-decline-button:hover{
+    box-shadow: inset 0 0 10px #23B684;
 }
