--- a/front_pages/pages/admin_employees/style.css
+++ b/front_pages/pages/admin_employees/style.css
@@ -1,40 +1,43 @@
 .admin_employee-buttons{
     margin: 4% 0 10px 0;
 
-
     font-family: Rubik Mono One, sans-serif;
     font-size: 46px;
     font-weight: 400;
     line-height: 57px;
     color: white;
 }
+
 .all-employee-button{
     margin-left: 100px;
 }
+
 .all-clients-button{
-    margin-left: 180px;
+    margin-left: 230px;
     color: rgb(255, 255, 255, 0.5)
 }
+
 .admin-employee-table{
-    /*растягиваю таблицу по всей ширине, чтобы полоска из
+    /*растягиваем таблицу по всей ширине, чтобы полоска из
     дизайна была во весь экран
     border-collapse: collapse - по сути убирает разрыв границ
-    блоков в таблице(можешь попробовать убрать и приглядеться);*/
+    блоков в таблице*/
     width: 100%;
     height: 80%;
     border-collapse: collapse;
 }
+
 .admin-employee-table tr{
     /*стили к каждой строке*/
     color: rgb(255, 255, 255);
     font-family: Rubik Mono One, sans-serif;
     font-weight: 400;
-
 }
+
 .admin-employee-table th{
     /*Стили к заголовку
     красивая линия из дизайна - граница заголовка
-    ширину дал такую, чтобы они равномерно были по всему
+    ширину даем такую, чтобы они равномерно были по всему
     пространству*/
     width: 34%;
     text-align: center;
@@ -42,25 +45,29 @@
     padding: 30px 0 21px 0;
     border-bottom: 3px solid rgb(35, 182, 132);
     border-top: 3px solid rgb(35, 182, 132);
-
 }
+
 .admin-employee-table td{
     /*стили обычного элемента столбца
-    падингом толкаю их, чтобы к друг другу не липли*/
+    падингом толкаем их, чтобы к друг другу не липли*/
     font-size: 26px;
     padding-top: 30px;
 }
+
 /*nth-child это обращение ко всей колонке, а цифра, это номер*/
 .admin-employee-table td:nth-child(1){
-    padding-left: 70px;
+    padding-left: 130px;
 }
+
 .admin-employee-table td:nth-child(2){
     text-align: center;
 }
+
 .admin-employee-table td:nth-child(3){
     text-align: right;
     padding-right: 200px;
 }
+
 .employee-table-bonus-button:hover{
     text-shadow: 5px 1px 8px rgb(35, 182, 132);
 }
@@ -80,6 +87,7 @@
     border-radius: 20px;
     background: rgb(255, 255, 255);
 }
+
 .give-bonus-header{
     margin: 46px auto 0 auto;
 
@@ -92,6 +100,7 @@
     font-weight: 400;
     line-height: 32px;
 }
+
 .give-bonus-input{
     margin: 26px auto;
 
@@ -103,6 +112,7 @@
     border-radius: 20px;
     background: rgb(255, 255, 255);
 }
+
 .give-bonus-decline-container{
     width: 100%;
 
@@ -125,8 +135,8 @@
     font-size: 26px;
     font-weight: 400;
     line-height: 32px;
-
 }
+
 .give-bonus-container input{
     width:100%;
     height: 100%;
@@ -135,8 +145,8 @@
     font-family: Rubik Mono One, sans-serif;
     font-size: 20px;
     font-weight: 400;
-
 }
+
 .give-bonus-decline-button:hover{
     box-shadow: inset 0 0 10px #23B684;
 }
