--- a/front_pages/pages/admin_clients/style.css
+++ b/front_pages/pages/admin_clients/style.css
@@ -5,12 +5,12 @@
     font-size: 46px;
     font-weight: 400;
     line-height: 57px;
-    color: white;
+    color: var(--main-logo-color);
 }
 
 .all-employee-button{
     margin-left: 100px;
-    color: rgb(255, 255, 255, 0.5)
+    color: var(--admin-button-inactive-color);
 }
 
 .all-clients-button{
@@ -29,7 +29,7 @@
 
 .admin-client-table tr{
     /*стили к каждой строке*/
-    color: rgb(255, 255, 255);
+    color: var(--main-logo-color);
     font-family: Rubik Mono One, sans-serif;
     font-weight: 400;
     margin-left: 20px;
@@ -44,8 +44,8 @@
     text-align: center;
     font-size: 28px;
     padding: 30px 0 21px 0;
-    border-bottom: 3px solid rgb(35, 182, 132);
-    border-top: 3px solid rgb(35, 182, 132);
+    border-bottom: 3px solid var(--main-enter-color);
+    border-top: 3px solid var(--main-enter-color);
 }
 
 .admin-client-table td{
