--- a/front_pages/pages/client_orders/style.css
+++ b/front_pages/pages/client_orders/style.css
@@ -8,7 +8,7 @@
     font-size: 46px;
     font-weight: 400;
     line-height: 57px;
-    color: white;
+    color: var(--main-logo-color);
 }
 
 .client-orders-table{
@@ -17,7 +17,7 @@
     border-collapse: collapse;
 }
 .client-orders-table tr{
-    color: rgb(255, 255, 255);
+    color: var(--main-logo-color);
     font-family: Rubik Mono One, sans-serif;
     font-weight: 400;
 }
@@ -25,8 +25,8 @@
     padding: 30px 0 30px 106px;
     font-size: 28px;
     text-align: left;
-    border-bottom: 3px solid rgb(35, 182, 132);
-    border-top: 3px solid rgb(35, 182, 132);
+    border-bottom: 3px solid var(--main-enter-color);
+    border-top: 3px solid var(--main-enter-color);
 }
 .client-orders-table td{
     font-size: 26px;
@@ -36,7 +36,7 @@
     padding-left: 70px;
 }
 .client-orders-table-agreement-button:hover{
-    text-shadow: 5px 1px 8px rgb(35, 182, 132);
+    text-shadow: 5px 1px 8px var(--main-enter-color);
 }
 /*Стили для всплывающего окна*/
 .client-orders-decline{
@@ -49,15 +49,15 @@
     height: 220px;
 
     box-sizing: border-box;
-    border: 2px solid rgb(35, 182, 132);
+    border: 2px solid var(--main-enter-color);
     border-radius: 20px;
-    background: rgb(255, 255, 255);
+    background: var(--main-logo-color);
 }
 
 .client-orders-decline-question{
     margin: 40px auto;
 
-    color: rgb(35, 182, 132);
+    color: var(--main-enter-color);
     font-family: Rubik Mono One, sans-serif;
     font-size: 26px;
     font-weight: 400;
@@ -79,11 +79,11 @@
     height: 56px;
 
     box-sizing: border-box;
-    border: 2px solid rgb(35, 182, 132);
+    border: 2px solid var(--main-enter-color);
     border-radius: 20px;
-    background: rgb(255, 255, 255);
+    background: var(--main-logo-color);
 
-    color: rgb(3, 46, 70);
+    color: var(--decline-button-color);
     font-family: Rubik Mono One, sans-serif;
     font-size: 26px;
     font-weight: 400;
@@ -91,5 +91,5 @@
 
 }
 .client-orders-decline-button:hover{
-    box-shadow: inset 0 0 10px #23B684;
+    box-shadow: inset 0 0 10px var(--main-enter-color);
 }
