--- a/front_pages/pages/employee_page/style.css
+++ b/front_pages/pages/employee_page/style.css
@@ -3,7 +3,7 @@
     font-size: 46px;
     font-weight: 400;
     line-height: 57px;
-    color: white;
+    color: var(--main-logo-color);
 
     width: 626px;
     height: 57px;
@@ -23,7 +23,7 @@
 
 .employee-table tr{
     /*стили к каждой строке*/
-    color: rgb(255, 255, 255);
+    color: var(--main-logo-color);
     font-family: Rubik Mono One, sans-serif;
     font-weight: 400;
     margin-left: 20px;
@@ -38,8 +38,8 @@
     text-align: center;
     font-size: 28px;
     padding: 30px 0 21px 0;
-    border-bottom: 3px solid rgb(35, 182, 132);
-    border-top: 3px solid rgb(35, 182, 132);
+    border-bottom: 3px solid var(--main-enter-color);
+    border-top: 3px solid var(--main-enter-color);
 }
 
 .employee-table td{
