--- a/front_pages/pages/registration/style.css
+++ b/front_pages/pages/registration/style.css
@@ -12,7 +12,7 @@
 
     margin: 0 auto;
 
-    color: rgb(255, 255, 255);
+    color: var(--main-logo-color);
     font-family: Luckiest Guy, sans-serif;
     font-size: 90px;
     font-weight: 400;
@@ -27,7 +27,7 @@
     font-weight: 400;
     line-height: 100%;
     text-align: center;
-    color: white;
+    color: var(--main-logo-color);
 }
 
 .registration-extra{
@@ -38,7 +38,7 @@
     font-family: Rubik Mono One, sans-serif;
     font-size: 54px;
     font-weight: 400;
-    color: rgba(35, 182, 132, 1);
+    color: var(--main-enter-color);
 
     width: 505px;
     height: 67px;
@@ -58,17 +58,17 @@
     height: 75px;
     margin: 0 auto 32px;
 
-    background: rgb(255, 255, 255);
-    border: 2px solid rgb(35, 182, 132);
+    background: var(--main-logo-color);
+    border: 2px solid var(--main-enter-color);
     border-radius: 20px;
 }
 /*Псевдокласс hover определяет, что будет с блоком, когда на него наведут курсор*/
 .registration-input:hover{
-    box-shadow: inset 0 0 10px #23B684;
+    box-shadow: inset 0 0 10px var(--main-enter-color);
 }
 
 .registration-input [placeholder]{
-    color: rgb(0, 0, 0);
+    color: var(--choice-input-color);
     font-family: Rubik Mono One, sans-serif;
     font-size: 26px;
     font-weight: 400;
@@ -87,11 +87,11 @@
 
     width: 560px;
     height: 64px;
-    border: 2px solid rgb(35, 182, 132);
+    border: 2px solid var(--main-logo-color);
     border-radius: 20px;
-    background: rgb(255, 255, 255);
+    background: var(--main-logo-color);
 
-    color: rgb(35, 182, 132);
+    color: var(--main-enter-color);
     font-family: Rubik Mono One, sans-serif;
     font-size: 30px;
     font-weight: 400;
@@ -100,5 +100,5 @@
 }
 /*Псевдокласс hover определяет, что будет с блоком, когда на него наведут курсор*/
 .registration-button:hover{
-    box-shadow: inset 0 0 10px #23B684;
+    box-shadow: inset 0 0 10px var(--main-enter-color);
 }
