--- a/front_pages/styles/common.css
+++ b/front_pages/styles/common.css
@@ -7,7 +7,7 @@ body{
     position: absolute;
     width: 100%;
     min-height: 100% !important;
-    background-color:  rgb(4, 61, 93);
+    background-color:  var(--all-background-color);
 }
 
 .order-create-button{
@@ -18,11 +18,11 @@ body{
     height: 75px;
 
     box-sizing: border-box;
-    border: 2px solid rgb(35, 182, 132);
+    border: 2px solid var(--main-enter-color);
     border-radius: 20px;
-    background: rgb(255, 255, 255);
+    background: var(--main-logo-color);
 
-    color: rgb(35, 182, 132);
+    color: var(--main-enter-color);
     font-family: Rubik Mono One, sans-serif;
     font-size: 30px;
     font-weight: 400;
@@ -30,7 +30,7 @@ body{
 }
 
 .order-create-button:hover{
-    box-shadow: inset 0 0 10px #23B684;
+    box-shadow: inset 0 0 10px var(--main-enter-color);
 }
 
 .continue-button{
@@ -48,5 +48,5 @@ body{
 }
 
 .exit-button:hover{
-    filter: drop-shadow(0 0 10px #23B684);
+    filter: drop-shadow(0 0 10px var(--main-enter-color));
 }
