--- a/client/src/pages/ImportantStyles/colors.css
+++ b/client/src/pages/ImportantStyles/colors.css
@@ -8,4 +8,5 @@
     --admin-button-inactive-color: rgb(255, 255, 255, 0.5);
     --enter-registr-button-color: rgb(239, 239, 239);
     --all-background-color: rgb(4, 61, 93);
+    --client-decline-order-impossible: rgb(196, 196, 196);
 }
