--- a/client/src/pages/Auth/Auth.css
+++ b/client/src/pages/Auth/Auth.css
@@ -17,7 +17,7 @@
     position: relative;
 
     width: 740px;
-    height: 300px;
+    height: 350px;
     margin: 0 auto;
 }
 
@@ -50,7 +50,7 @@
 .enter-button{
     position: absolute;
     left: 50%;
-    bottom: -7%;
+    bottom: -5%;
     transform: translate(-50%, -50%);
 
     width: 440px;
@@ -157,4 +157,18 @@
 /*Псевдокласс hover определяет, что будет с блоком, когда на него наведут курсор*/
 .registration-button:hover{
     box-shadow: inset 0 0 10px var(--main-enter-color);
+}
+
+/*Стили для нового чекбокса*/
+.is-employee-enter-checkbox{
+    width: 30px;
+    height: 30px;
+}
+.is-employee-enter-label{
+    display: block;
+    color: var(--main-enter-color);
+    font-family: Rubik Mono One, sans-serif;
+    font-size: 32px;
+    font-weight: 400;
+    text-align: center;
 }
